Added listeners and semi random answers to user questions

--- a/8 Ball/index.html
+++ b/8 Ball/index.html
@@ -18,7 +18,7 @@
 	</head>
 
 	<body>
-		<div class="answer"> &nbsp; </div>
+		<div id="answer" class="answer"> &nbsp; </div>
 		<div class="body">
 			<div class="white">
 				<div class="eight">
@@ -32,7 +32,7 @@
 			</div>
 		</div>
 
-		<input class="textbox" type="text" name="textbox" placeholder="Ask a Question" autofocus autocomplete="off"/>
+		<input class="textbox" type="text" name="textbox" id="textbox" placeholder="Ask a Question" autofocus autocomplete="off"/>
 
 		<script src="script.js"></script>
 
